2014-01-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.62.2 released.

2014-01-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.62.1 released.

2014-01-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.62.0 released.

2014-01-10  Carl Hetherington  <cth@carlh.net>

	* Try to stop the queue of things to write filling up excessively
	on fast CPUs.

	* Try to fix double "are you sure" prompt on quitting with active jobs.

	* Version 1.61.2 released.

2014-01-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.61.1 released.

2014-01-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.61.0 released.

2014-01-09  Carl Hetherington  <cth@carlh.net>

	* Hopefully fix somewhat inexplicable inability of Windows to open
	new files on top of old ones in some circumstances (with audio
	MXFs).

	* Version 1.60 released.

2014-01-09  Carl Hetherington  <cth@carlh.net>

	* More fixes for slow-downs on fast computers.

2014-01-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.59 released.

2014-01-07  Carl Hetherington  <cth@carlh.net>

	* Version 1.58 released.

2014-01-07  Carl Hetherington  <cth@carlh.net>

	* Fix Windows build of FFmpeg to link against zlib, which fixes parsing
	of some .mov files.

	* Very primitive check-for-updates feature added.

	* Allow still-moving-image sources to have their frame rate specified.

2014-01-06  Carl Hetherington  <cth@carlh.net>

	* Basics of per-channel audio gain (#247).

	* Give a warning on make DCP if it seems unlikely that the disk
	will have enough space to store the finished DCP (#92).

	* Make sure forced languages override the environment for gettext()
	as well as wxWidgets' i18n code (#108).

	* Bump libdcp version to get a fix for VOLINDEX/ASSETMAP file extensions
	with interop (#206).

	* Fix subtitle colouring (#152).

	* Fix mis-timed subtitles when there is a non-zero video PTS offset.

	* Remove seemingly unnecessary checks on image directories.
